# Open-RPG-builder

./: .gitignore  CMakeLists.txt  README.md
rpg_game/: CMakeLists.txt
rpg_game/rpg-build/: rpg-game
rpg_game/source/include/: gameManager.hpp  graphics.hpp
rpg_game/source/src/: gameManager.cpp  graphics.cpp  main.cpp
